[gd_scene load_steps=46 format=2]

[ext_resource path="res://scripts/cfg.gd" type="Script" id=1]
[ext_resource path="res://scripts/settings.gd" type="Script" id=2]
[ext_resource path="res://audio/merge.wav" type="AudioStream" id=3]
[ext_resource path="res://scripts/sounds.gd" type="Script" id=4]
[ext_resource path="res://audio/arcade_game.ogg" type="AudioStream" id=5]
[ext_resource path="res://scripts/music.gd" type="Script" id=6]
[ext_resource path="res://images/background.png" type="Texture" id=7]
[ext_resource path="res://scripts/event_layer.gd" type="Script" id=8]
[ext_resource path="res://scripts/hud_layer.gd" type="Script" id=9]
[ext_resource path="res://images/top_panel.png" type="Texture" id=10]
[ext_resource path="res://images/score_container.png" type="Texture" id=11]
[ext_resource path="res://fonts/numbers.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://images/score_post.png" type="Texture" id=13]
[ext_resource path="res://images/max_score_post.png" type="Texture" id=14]
[ext_resource path="res://images/bottom_border.png" type="Texture" id=15]
[ext_resource path="res://images/lower_buttons/menu_button.png" type="Texture" id=16]
[ext_resource path="res://images/lower_buttons/menu_button_pressed.png" type="Texture" id=17]
[ext_resource path="res://images/lower_buttons/restart_button.png" type="Texture" id=18]
[ext_resource path="res://images/lower_buttons/restart_button_pressed.png" type="Texture" id=19]
[ext_resource path="res://images/lower_buttons/book.png" type="Texture" id=20]
[ext_resource path="res://images/lower_buttons/book_pressed.png" type="Texture" id=21]
[ext_resource path="res://images/lower_buttons/broccoli.png" type="Texture" id=22]
[ext_resource path="res://images/lower_buttons/broccoli_pressed.png" type="Texture" id=23]
[ext_resource path="res://images/lower_buttons/broccoli_disabled.png" type="Texture" id=24]
[ext_resource path="res://images/lower_buttons/n_broccolis.png" type="Texture" id=25]
[ext_resource path="res://scripts/board_layer.gd" type="Script" id=26]
[ext_resource path="res://images/board_bg.png" type="Texture" id=27]
[ext_resource path="res://tileset/tileset.tres" type="TileSet" id=28]
[ext_resource path="res://scripts/effects_layer.gd" type="Script" id=29]
[ext_resource path="res://images/popups/rewarded_ads/plus1.png" type="Texture" id=30]
[ext_resource path="res://scripts/popup_layer.gd" type="Script" id=31]
[ext_resource path="res://images/black_screen.png" type="Texture" id=32]
[ext_resource path="res://scripts/input_handler.gd" type="Script" id=33]

[sub_resource type="GDScript" id=1]

script/source = "extends Node2D


var open_offline_popup = false


func _enter_tree():
	game.setup()


func _ready():
	if !game.savegame.file_exists($cfg.SAVE_GAME_PATH):
		game.board_layer.spawn_token(null, 1, false)
	else:
		game.load_game()

	# this flag is set in game_loader.gd
	if open_offline_popup:
		game.popup_layer.open(\"offline\")
	else:
		$\"/root\".set_disable_input(false)
"

[sub_resource type="DynamicFont" id=2]

size = 55
use_mipmaps = true
use_filter = true
font_data = ExtResource( 12 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 45
use_mipmaps = true
use_filter = true
font_data = ExtResource( 12 )
_sections_unfolded = [ "Font", "Resource", "Settings" ]

[sub_resource type="Animation" id=4]

length = 0.2
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("circle:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("circle:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -20.0, 0.0 ]
}

[sub_resource type="GDScript" id=5]

script/source = "extends Node2D

onready var tilemap = $tilemap
onready var tokens = $tokens
"

[sub_resource type="Animation" id=10]

resource_name = "plus1"
length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("plus:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 930, 1544 ), Vector2( 930, 1300 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("plus:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../../hud_layer/hud/lower_buttons/broccoli:rect_scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("plus:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=11]

resource_name = "plus1"
length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("plus:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 930, 1544 ), Vector2( 930, 1300 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("plus:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../../hud_layer/hud/lower_buttons/broccoli:rect_scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("plus:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=12]

resource_name = "plus1"
length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("plus:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 930, 1544 ), Vector2( 930, 1300 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("plus:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../../hud_layer/hud/lower_buttons/broccoli:rect_scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("plus:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Shader" id=6]

code = "shader_type canvas_item;

uniform float amount : hint_range(0,5);

void fragment() {

	COLOR.rgb = textureLod(SCREEN_TEXTURE,SCREEN_UV,amount).rgb;
}
"

[sub_resource type="ShaderMaterial" id=7]

render_priority = 0
shader = SubResource( 6 )
shader_param/amount = 1.0

[sub_resource type="Animation" id=8]

length = 0.4
loop = false
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("transition_layer/black_screen:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=9]

length = 0.4
loop = false
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("transition_layer/black_screen:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="stage" type="Node2D" index="0"]

script = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="cfg" type="Node" parent="." index="0"]

script = ExtResource( 1 )

[node name="settings" type="Node" parent="." index="1"]

script = ExtResource( 2 )

[node name="sounds" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 3 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"
script = ExtResource( 4 )
_sections_unfolded = [ "Pause" ]

[node name="music" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 5 )
volume_db = -7.0
autoplay = true
mix_target = 0
bus = "Master"
script = ExtResource( 6 )

[node name="background" type="Sprite" parent="." index="4"]

texture = ExtResource( 7 )
centered = false
_sections_unfolded = [ "Material", "Offset", "Transform", "Visibility", "Z Index" ]

[node name="event_layer" type="Node2D" parent="." index="5"]

editor/display_folded = true
script = ExtResource( 8 )
_sections_unfolded = [ "Pause" ]

[node name="broccoli_girl_timer" type="Timer" parent="event_layer" index="0"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = true
_sections_unfolded = [ "Pause" ]

[node name="hud_layer" type="CanvasLayer" parent="." index="6"]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 9 )

[node name="hud" type="Node2D" parent="hud_layer" index="0"]

[node name="header" type="Container" parent="hud_layer/hud" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1080.0
margin_bottom = 225.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="top_border" type="Sprite" parent="hud_layer/hud/header" index="0"]

position = Vector2( 540, 125 )
texture = ExtResource( 10 )

[node name="current_score" type="Container" parent="hud_layer/hud/header" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 377.0
margin_top = 161.0
margin_right = 417.0
margin_bottom = 201.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="container_sprite" type="Sprite" parent="hud_layer/hud/header/current_score" index="0"]

position = Vector2( 12, -2 )
texture = ExtResource( 11 )

[node name="current_score" type="Label" parent="hud_layer/hud/header/current_score/container_sprite" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -82.0
margin_top = -38.0
margin_right = 118.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="post_sprite" type="Sprite" parent="hud_layer/hud/header/current_score" index="1"]

position = Vector2( -174.325, -4.09686 )
texture = ExtResource( 13 )

[node name="max_score" type="Container" parent="hud_layer/hud/header" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 838.0
margin_top = 163.0
margin_right = 878.0
margin_bottom = 203.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="container_sprite" type="Sprite" parent="hud_layer/hud/header/max_score" index="0"]

position = Vector2( 12, -2 )
texture = ExtResource( 11 )

[node name="max_score" type="Label" parent="hud_layer/hud/header/max_score/container_sprite" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -82.0
margin_top = -38.0
margin_right = 118.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="post_sprite" type="Sprite" parent="hud_layer/hud/header/max_score" index="1"]

position = Vector2( -147.325, -4.09686 )
texture = ExtResource( 14 )

[node name="lower_buttons" type="Container" parent="hud_layer/hud" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1594.0
margin_right = 1080.0
margin_bottom = 1764.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="bottom_border" type="Sprite" parent="hud_layer/hud/lower_buttons" index="0"]

position = Vector2( 540, 210 )
texture = ExtResource( 15 )

[node name="menu" type="TextureButton" parent="hud_layer/hud/lower_buttons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 60.0
margin_right = 230.0
margin_bottom = 165.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )
_sections_unfolded = [ "Textures" ]

[node name="reset" type="TextureButton" parent="hud_layer/hud/lower_buttons" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 290.0
margin_right = 460.0
margin_bottom = 170.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )
_sections_unfolded = [ "Textures" ]

[node name="excuses" type="TextureButton" parent="hud_layer/hud/lower_buttons" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 620.0
margin_right = 790.0
margin_bottom = 170.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 21 )
_sections_unfolded = [ "Textures" ]

[node name="broccoli" type="TextureButton" parent="hud_layer/hud/lower_buttons" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 850.0
margin_right = 1020.0
margin_bottom = 170.0
rect_pivot_offset = Vector2( 85, 85 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 23 )
texture_disabled = ExtResource( 24 )
_sections_unfolded = [ "Rect", "Textures", "Visibility" ]

[node name="circle" type="Sprite" parent="hud_layer/hud/lower_buttons/broccoli" index="0"]

pause_mode = 2
position = Vector2( 141.724, 24.5668 )
texture = ExtResource( 25 )
_sections_unfolded = [ "Pause" ]

[node name="n_broccolis" type="Label" parent="hud_layer/hud/lower_buttons/broccoli/circle" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -29.0
margin_top = -30.0
margin_right = 29.0
margin_bottom = 29.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "3"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_fonts" ]

[node name="circle_animation" type="AnimationPlayer" parent="hud_layer/hud/lower_buttons/broccoli" index="1"]

pause_mode = 2
root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/used = SubResource( 4 )
blend_times = [  ]
_sections_unfolded = [ "Pause" ]

[node name="board_layer" type="CanvasLayer" parent="." index="7"]

layer = 3
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 26 )

[node name="board" type="Node2D" parent="board_layer" index="0"]

script = SubResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="background" type="Sprite" parent="board_layer/board" index="0"]

position = Vector2( 30, 460 )
scale = Vector2( 1, 0.9 )
texture = ExtResource( 27 )
centered = false
offset = Vector2( -30, -30 )
_sections_unfolded = [ "Offset", "Region", "Transform", "Z Index" ]

[node name="tilemap" type="TileMap" parent="board_layer/board" index="1"]

position = Vector2( 30, 460 )
mode = 0
tile_set = ExtResource( 28 )
cell_size = Vector2( 340, 340 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0 )
_sections_unfolded = [ "Z Index" ]

[node name="tokens" type="Node2D" parent="board_layer/board" index="2"]

position = Vector2( 198, 627 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="dying_tokens" type="CanvasLayer" parent="." index="8"]

pause_mode = 2
layer = 5
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
_sections_unfolded = [ "Pause" ]

[node name="tokens" type="Node2D" parent="dying_tokens" index="0"]

position = Vector2( 198, 627 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="effects_layer" type="CanvasLayer" parent="." index="9"]

pause_mode = 2
editor/display_folded = true
layer = 6
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 29 )
_sections_unfolded = [ "Pause" ]

[node name="rewarded_animation" type="Node2D" parent="effects_layer" index="0"]

[node name="plus1" type="Node2D" parent="effects_layer/rewarded_animation" index="0"]

[node name="animation" type="AnimationPlayer" parent="effects_layer/rewarded_animation/plus1" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/plus1 = SubResource( 10 )
blend_times = [  ]

[node name="plus" type="Sprite" parent="effects_layer/rewarded_animation/plus1" index="1"]

visible = false
position = Vector2( 930, 1544 )
texture = ExtResource( 30 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="plus2" type="Node2D" parent="effects_layer/rewarded_animation" index="1"]

[node name="animation" type="AnimationPlayer" parent="effects_layer/rewarded_animation/plus2" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/plus1 = SubResource( 11 )
blend_times = [  ]

[node name="plus" type="Sprite" parent="effects_layer/rewarded_animation/plus2" index="1"]

visible = false
position = Vector2( 930, 1544 )
texture = ExtResource( 30 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="plus3" type="Node2D" parent="effects_layer/rewarded_animation" index="2"]

[node name="animation" type="AnimationPlayer" parent="effects_layer/rewarded_animation/plus3" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/plus1 = SubResource( 12 )
blend_times = [  ]

[node name="plus" type="Sprite" parent="effects_layer/rewarded_animation/plus3" index="1"]

visible = false
position = Vector2( 930, 1544 )
texture = ExtResource( 30 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="timer" type="Timer" parent="effects_layer/rewarded_animation" index="3"]

process_mode = 1
wait_time = 0.3
one_shot = true
autostart = false

[node name="popup_layer" type="CanvasLayer" parent="." index="10"]

layer = 7
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 31 )
_sections_unfolded = [ "Pause" ]

[node name="blur" type="Sprite" parent="popup_layer" index="0"]

visible = false
modulate = Color( 0.721569, 0.721569, 0.721569, 1 )
material = SubResource( 7 )
texture = ExtResource( 32 )
centered = false
_sections_unfolded = [ "Material", "Offset", "Rect", "Transform", "Visibility" ]

[node name="transition_layer" type="CanvasLayer" parent="." index="11"]

layer = 8
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
_sections_unfolded = [ "Pause" ]

[node name="black_screen" type="Sprite" parent="transition_layer" index="0"]

modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 32 )
centered = false

[node name="transition" type="AnimationPlayer" parent="." index="12"]

pause_mode = 2
root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/close = SubResource( 8 )
anims/open = SubResource( 9 )
blend_times = [  ]

[node name="input_handler" type="Control" parent="." index="13"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 453.0
margin_right = 1080.0
margin_bottom = 1580.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 33 )

[connection signal="timeout" from="event_layer/broccoli_girl_timer" to="event_layer" method="_on_broccoli_girl_timer_timeout"]

[connection signal="pressed" from="hud_layer/hud/lower_buttons/menu" to="hud_layer" method="_on_menu_pressed"]

[connection signal="pressed" from="hud_layer/hud/lower_buttons/reset" to="hud_layer" method="_on_reset_pressed"]

[connection signal="pressed" from="hud_layer/hud/lower_buttons/excuses" to="hud_layer" method="_on_excuses_pressed"]

[connection signal="pressed" from="hud_layer/hud/lower_buttons/broccoli" to="hud_layer" method="_on_broccoli_pressed"]

[connection signal="user_input" from="input_handler" to="board_layer" method="move_tokens"]


